# logAnalyzer

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  main.cpp
checker/: CMakeLists.txt  Checkers.cpp  Checkers.h  CrossScriptingChecker.cpp  CrossScriptingChecker.h  LogChecker.cpp  LogChecker.h  ManyLogInTimeChecker.cpp  ManyLogInTimeChecker.h  SqlInjectionChecker.cpp  SqlInjectionChecker.h
fileLoader/: CMakeLists.txt  FileLoader.cpp  FileLoader.h
include/: Checkers.h  FileLoader.h  LineParser.h  LogChecker.h
include/window/: WindowManager.h
lineParser/: CMakeLists.txt  LineParser.cpp  LineParser.h  Uri.cpp  Uri.h
mywindow/: CMakeLists.txt  DataWrapper.h  WindowManager.cpp  WindowManager.h  WindowPanelBase.cpp  WindowPanelBase.h  WindowPanelDetail.cpp  WindowPanelDetail.h  WindowPanelReadLines.cpp  WindowPanelReadLines.h  WindowPanelResults.cpp  WindowPanelResults.h
src/: Checkers.cpp  FileLoader.cpp  LineParser.cpp  LogChecker.cpp  Uri.cpp
src/window/: WindowManager.cpp
